[tool.poetry]
name = "scurri_test_task"
version = "0.1.0"
description = ""
authors = ["serge <sergwle@gmail.com>"]
packages = [ { include = "api" } ]


[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pytest = "^7.1.2"
flake8 = "^4.0.1"
ipdb = "^0.13.9"
autopep8 = "^1.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
